# dotfiles

./: .eslintrc.json  .gitattributes  .gitignore  CLAUDE.md  MIGRATION_PLAN.md  README.md  eslint.config.js  install.sh  install_debian_base.sh  install_mac.sh  install_pop_os.sh  install_server.sh  install_ubuntu.sh  install_windows.ps1  package-lock.json  package.json  pyproject.toml  tsconfig.json  update.sh  update_links.sh  update_links_unix.sh  update_mac.sh
config/alacritty/: alacritty.yml
config/starship/: starship.toml
config/vscode/: settings.json
config/windows/: settings.json
config/zsh/: .zshrc  update_links_unix.sh
git/: .config  setup.py
osx/: .defaults  .defaults.sh  .osx
powershell/: Microsoft.PowerShell_profile.ps1
setup/: main.py
setup/modules/: __init__.py  mouse.py  nerd_fonts.py  starship.py  terminal.py  vscode.py  windows.py
setup/utils/: file_ops.py
src/: __init__.py  main.py  update_links_unix.sh
src/git/: setup.py  setup.ts
src/modules/: git.py  mouse.py  nerd_fonts.py  osx.py  starship.py  terminal.py  vscode.py  windows.py  zsh.py
src/mouse/: setup.ts
src/nerd-fonts/: setup.ts
src/powershell/: Microsoft.PowerShell_profile.ps1
src/starship/: setup.py  setup.ts
src/terminal/: alacritty.yml  setup.ts
src/utils/: __init__.py  utils.ts
src/vscode/: link_settings.py  settings.json  setup.ts
src/windows/: settings.json  setup.ts
src/zsh/: .zsh_aliases  .zshrc  update_links_unix.sh
starship/: setup.py  starship.toml
utils/: path_utils.py
vscode/: extensions.sh  import_extensions.py  link_settings.py  settings.json  setup.py
zsh/: .zsh_aliases  .zshrc
